# orbat

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md
.github/: copilot-instructions.md
.github/workflows/: format-check.yml  unit-tests.yml
benchmarks/: README.md
docs/: README.md  black_litterman.md  cli.md  constraints.md  efficient_frontier.md  linear_algebra.md  markowitz.md  style.md
examples/: CMakeLists.txt  README.md  black_litterman_demo.cpp  cma_inputs_demo.cpp  constraints_demo.cpp  efficient_frontier_demo.cpp  linear_algebra_demo.cpp  markowitz_demo.cpp
include/: README.md
include/orbat/core/: constants.hpp  matrix.hpp  vector.hpp
include/orbat/optimizer/: README.md  black_litterman.hpp  constraint.hpp  covariance_matrix.hpp  efficient_frontier.hpp  expected_returns.hpp  markowitz.hpp
python/: README.md
scripts/: README.md  check-format.sh  format.sh
src/: CMakeLists.txt  README.md
src/cli/: arg_parser.hpp  bl_command.hpp  error_codes.hpp  file_parser.hpp  main.cpp  mpt_command.hpp
tests/: CMakeLists.txt  README.md
tests/data/: covariance.csv  covariance.json  covariance_object.json  covariance_with_labels.csv  covariance_with_labels.json  expected_returns.csv  expected_returns.json  expected_returns_object.json  expected_returns_with_header.csv  expected_returns_with_labels.csv  expected_returns_with_labels.json  invalid_asymmetric_cov.csv  invalid_non_pd_cov.csv  invalid_nonsquare_cov.csv  invalid_returns.csv  invalid_zero_diagonal_cov.csv
tests/unit/: test_black_litterman.cpp  test_cli.cpp  test_constraint.cpp  test_covariance_matrix.cpp  test_efficient_frontier.cpp  test_expected_returns.cpp  test_markowitz.cpp  test_matrix.cpp  test_optimization_result.cpp  test_vector.cpp
